RestaurantManagement/src/objects/Table__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <description>Locations where restos are located</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newyork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_seats__c</fullName>
        <label>No of seats</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of table in resto- acc. to location</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Table_Number__c</fullName>
        <label>Table Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>